--- a/junsatsuma-theme/custom.css
+++ b/junsatsuma-theme/custom.css
@@ -17,3 +17,26 @@
 #widget-footer {
 	margin-top: 20px;
 }
+
+/* begin video container*/
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+ 
+.video-container iframe, 
+.video-container object, 
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+audio {
+	width:500px;
+}
