--- a/junsatsuma-theme/custom.css
+++ b/junsatsuma-theme/custom.css
@@ -18,7 +18,7 @@
 	margin-top: 20px;
 }
 
-/* begin video container*/
+/* begin video container(responsive)*/
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
@@ -39,4 +39,13 @@
 
 audio {
 	width:500px;
+}
+
+@media screen and (max-width: 600px) {
+	/* likebox responsive*/
+	div.fb-like,
+	div.fb-like iframe[style],
+	div.fb-like span {
+		width: 100% !important;
+	} 
 }
