add main image slideshow add main images update favicon

--- a/junsatsuma-theme/custom.css
+++ b/junsatsuma-theme/custom.css
@@ -49,3 +49,24 @@ audio {
 		width: 100% !important;
 	} 
 }
+
+
+#slideshow {
+    position:relative;
+    height: 500px;
+}
+
+#slideshow IMG {
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:8;
+}
+
+#slideshow IMG.active {
+    z-index:10;
+}
+
+#slideshow IMG.last-active {
+    z-index:9;
+}
